[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "idea_utils"
version = "0.0.2"
authors = [
  { name="David Caldwell", email="dcaldwell3@uams.edu" },
]
dependencies = [
    "pandas",
    "openpyxl",
    "reportlab"
]
description = "Utilities for handling proteomics samples"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/IDeA-Proteomics/IDeA_Utilities"
